Added application context configuration using @Configuration annotated class and implemented in it a property overrider

--- a/vecty-0.1.x/endpoints/src/main/resources/static/index.html
+++ b/vecty-0.1.x/endpoints/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
 	
 	<h3>Upload an image and process it with potrace</h3>
 	<form method="POST" enctype="multipart/form-data"
-		action="/potraceIt">
+		action="/processIt">
 		<p>
 			File to upload: <input type="file" name="file"><br /> 
 		</p>
